dg to 21, fixed config